feat: Second Requirement changes, create cat objects and store       the information.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body class="container">
-<!-- 	<div class="dropDown">
+	<div class="dropDown">
 		<button>Select Cat</button>
-	</div> -->
+	</div>
 	<div class="img_container">
-		<img src="images/Asher.jpg" class="image1">
+		<!-- <img src="images/Asher.jpg" class="image1"> -->
     </div>
 
 	<script src="app.js"></script>
