feat: Starting over js code. Unable to connect my code in a way       to append the cat picture on the dom according to what element       in the cat list the user is pressing.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 </head>
 
 <body class="container">
-	<div class="dropDown">
+	<div class="drop_down">
 		<button>Select Cat</button>
+		<div class="drop_down_contents drop_down_visibility">
+		</div>
 	</div>
 	<div class="img_container">
-		<!-- <img src="images/Asher.jpg" class="image1"> -->
     </div>
 
 	<script src="app.js"></script>
