feat: Cat premium changes done. Split view, data and octapus.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
 <body class="container">
 	<div class="drop_down">
 		<button>Select Cat</button>
-		<div class="drop_down_contents drop_down_visibility">
-		</div>
+		<div class="drop_down_contents drop_down_visibility"></div>
 	</div>
 	<div class="img_container">
+        <div class="cat_card">
+            <h2 class="cat_name"></h2>
+            <img class="cat_image" src="">
+            <p class="cat_clicks"></p>
+        </div>
     </div>
 
 	<script src="app.js"></script>
